# python-project-50

./: Makefile  README.md  pyproject.toml  setup.sfg
.github/workflows/: flake8.yml  pyci.yml
app_scripts/: gendiff.py
app_scripts/formatting/: plain.py
gendiff/: __init__.py  generate_diff.py
gendiff/formatting/: json.py  plain.py  stylish.py
tests/: test_gendiff.py
tests/fixtures/: file4.yaml  file5.yaml  file6.txt  file8.txt
